# wordstar-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
.github/workflows/: release.yml
assets/fonts/: ATTRIBUTION.md
src/: app.rs  attributes.rs  browser.rs  calc.rs  commands.rs  gfx.rs  help.rs  input.rs  keymap.rs  lib.rs  main.rs  menu.rs  pdf.rs  platform.rs  preview.rs  theme.rs  wasm.rs  wordstar.rs  wrap.rs
src/ui/: mod.rs
