[package]
name = "wordstar-rs"
version = "0.3.0"
edition = "2024"
description = "A faithful DOS WordStar 7 clone for the terminal, written in Rust."
authors = ["dividebysandwich <josef.jahn@gmail.com>"]
license = "GPL-2.0-only"
repository = "https://github.com/dividebysandwich/wordstar-rs"
readme = "README.md"
keywords = ["wordstar", "editor", "tui", "markdown", "ratatui"]
categories = ["command-line-utilities", "text-editors"]

# A `cdylib` is needed for the WebAssembly/Ratzilla build (Trunk links it);
# `rlib` keeps the native binary and the unit tests linking against the library.
[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies shared by every target. Rendering (cosmic-text, image), document
# parsing/export (printpdf, pulldown-cmark) and the text widget all compile to
# wasm32-unknown-unknown unchanged.
[dependencies]
anyhow = "1.0.102"
cosmic-text = "0.19.0"
image = { version = "0.25", default-features = false }
printpdf = { version = "0.9.1", default-features = false }
pulldown-cmark = { version = "0.13.4", default-features = false }
unicode-segmentation = "1"
unicode-width = "0.2.2"

# Native terminal stack. `crossterm` does not build for wasm, so everything that
# depends on it (the crossterm ratatui backend, the inline-image protocol, the
# textarea's crossterm input conversion) is confined to non-wasm targets.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29"
dirs = "6.0.0"
ratatui = "0.30"
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
ratatui-textarea = { version = "0.9", features = ["crossterm", "search"] }

# Browser stack. Ratzilla supplies a DOM backend for ratatui (built without the
# crossterm backend); web-sys/js-sys provide the file picker, downloads and the
# preview canvas.
[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui = { version = "0.30", default-features = false }
ratatui-textarea = { version = "0.9", default-features = false, features = ["search"] }
ratzilla = "0.3"
# ratatui-core needs a `critical-section` implementation; the std impl works on
# single-threaded wasm and resolves the otherwise-undefined acquire/release.
critical-section = { version = "1", features = ["std"] }
# Same version cosmic-text uses, so our custom font fallback's `Script` type
# matches the `cosmic_text::Fallback` trait signature.
unicode-script = "0.5.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "FontFaceSet",
    "HtmlElement",
    "Storage",
    "console",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "FileReader",
    "CssStyleDeclaration",
    "Performance",
]

# Strip and optimize release binaries (smaller archives, .deb and .msi payloads).
[profile.release]
strip = true
lto = "thin"

# Debian package metadata for `cargo deb`. Assets are left to cargo-deb's
# defaults so that cross-target builds (`--target …`) resolve the binary path
# automatically.
[package.metadata.deb]
maintainer = "dividebysandwich <josef.jahn@gmail.com>"
copyright = "2026, dividebysandwich"
section = "editors"
priority = "optional"
extended-description = """
WordStar-rs is a faithful clone of DOS WordStar 7 for the modern terminal:
the classic blue screen, the menu bar, the ruler, the control diamond and the
^K/^Q/^P command chords, plus a built-in file browser, mouse support and a live
Markdown preview. Documents are saved as Markdown.
"""

# WiX/MSI metadata for `cargo wix` (Windows installer).
[package.metadata.wix]
upgrade-guid = "6F2B7C1E-2A9D-4B3E-9C5A-1D2E3F4A5B6C"
path-guid = "8A1C4D2F-7E3B-4A6C-9D8E-0F1A2B3C4D5E"

